# number_recognition

./: .gitignore  README.md  main.py  pyproject.toml
src/: parser.py  parser2.py
