[project]
name = "number-recognition"
version = "0.1.0"
description = "Разработка системы для автоматического распознавания автомобильных номеров"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
]
